--- a/app.json
+++ b/app.json
@@ -4,13 +4,13 @@
     "slug": "bmi-calculator-appp",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/images/icon.png",
+    "icon": "./assets/images/bmi-icon.png",
     "scheme": "myapp",
     "userInterfaceStyle": "automatic",
     "splash": {
-      "image": "./assets/images/splash.png",
+      "image": "./assets/images/bmi-splash.png",
       "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "backgroundColor": "#55B8D7"
     },
     "ios": {
       "supportsTablet": true
