--- a/package.json
+++ b/package.json
@@ -30,9 +30,13 @@
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-paper": "^5.12.5",
     "react-native-reanimated": "~3.10.1",
+    "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
+    "react-native-svg": "^7.2.1",
+    "react-native-svg-charts": "^5.4.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.10"
   },
